# podman-socket-proxy

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  REVIEW-linus.md
.beads/: .gitignore  config.yaml  issues.jsonl
.beads/.br_history/: issues.20260310_222203_638983644.jsonl  issues.20260310_222203_741269933.jsonl  issues.20260310_222203_826027662.jsonl  issues.20260310_222203_914384340.jsonl  issues.20260310_222203_999971270.jsonl  issues.20260310_222204_095411814.jsonl  issues.20260310_222204_196297974.jsonl  issues.20260310_222204_288405130.jsonl  issues.20260310_222204_377710617.jsonl  issues.20260310_222204_474194493.jsonl  issues.20260310_222204_575067813.jsonl  issues.20260310_222204_682930757.jsonl  issues.20260310_222204_795119660.jsonl  issues.20260310_222204_905503184.jsonl  issues.20260310_222205_022574429.jsonl  issues.20260310_222205_133793396.jsonl  issues.20260310_222205_243758114.jsonl  issues.20260310_222205_354773674.jsonl  issues.20260310_222205_471846789.jsonl  issues.20260310_222205_586377383.jsonl  issues.20260310_222205_714666356.jsonl  issues.20260310_222711_670862802.jsonl  issues.20260310_223327_144501039.jsonl  issues.20260310_223438_807677735.jsonl  issues.20260310_224648_169055009.jsonl  issues.20260310_225212_772421006.jsonl  (+143 more)
docs/: ags-integration.md  getting-started.md  policy-reference.md
policy/: default-policy.json
src/: audit.rs  backend.rs  cli.rs  config.rs  error.rs  lib.rs  main.rs  paths.rs  policy.rs  proxy.rs  rewrite.rs  session.rs
tests/: integration_suite.rs  proxy_tests.rs
(+13 files in other folders)
