[package]
name = "podman-socket-proxy"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "psp"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
comfy-table = "7"
indicatif = "0.17"
axum = "0.8"
bytes = "1.10"
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
dialoguer = "0.11"
http = "1.3"
http-body-util = "0.1"
hyper = { version = "1.6", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["client-legacy", "http1", "tokio"] }
hyperlocal = "0.9"
nix = { version = "0.29", default-features = false, features = ["user"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "http2", "charset", "rustls-tls", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.20"
tokio = { version = "1.46", features = ["macros", "rt-multi-thread", "net", "signal", "fs", "io-util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "registry"] }
url = "2.5"

[dev-dependencies]
